--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,24 @@
 {
 	font-family: 'Lato', sans-serif;
 }
+
+
+.wrapper {
+    height: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #000000; 
+}
+
+.txt {
+    color: #ffffff;
+    background:#000000;
+    font-size:200px;
+    font-weight: bold;
+    font-family: Arial;
+    text-transform: uppercase;
+}
+.neon wrapper {
+    display: inline-flex;
+}
